[package]
name = "ds-learn-rust"
version = "0.1.0"
edition = "2021"
authors = ["dhilipsiva <dhilipsiva@pm.me>"]
description = "Code that I wrote while learning Rust from the Rust Book"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# [profile.release]
# panic = 'abort'
